dataset1235/2025-2/2318198438/users/1324664027/executions/2601575092_3444416998.log
== SUBMISSION (2025-08-12 00:46:41)
-- CODE: 
expressao = 30-3**2+8//3**2*10 
print(30-3**2+8//3**2*10)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:41:46)
-- CODE: 
expressao = 
print(30-3**2+8//3**2*10)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao = 
                ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao = 
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:41:14)
-- CODE: 
expressao = 30-3**2+8//3**2*10 
print(30-3**2+8//3**2*10)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
---- user output:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:41:44)
-- CODE: 
expressao = 
print(30-3**2+8//3**2*10)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao = 
                ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao = 
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:42:07)
-- CODE: 
expressao = 30-3**2+8//3**2*10 
print(30-3**2+8//3**2*10)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
---- user output:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:38:35)
-- CODE: 
expressao = 
print(30-3**2+8//3**2*10)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao = 
                ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
-- ERROR:
File "XXXX", line 1
    expressao = 
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:41:35)
-- CODE: 
expressao = print("30-3**2+8//3**2*10")
print(30-3**2+8//3**2*10)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- TEST CASE 2:
---- input:
xx
---- correct output:
21
---- user output:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
